swagger prefix fix
