# docs/swagger.yaml
@@ -1,30 +1,15 @@
 basePath: /api
 definitions:
-  RIP_internal_app_ds.CartBadgeDTO:
+  ds.CartBadgeDTO:
     properties:
+      cooling_id:
+        type: integer
       count:
         type: integer
-      request_id:
-        type: integer
     type: object
-  RIP_internal_app_ds.ComponentCreateRequest:
-    properties:
-      description:
-        type: string
-      specifications:
-        items:
-          type: string
-        type: array
-      tdp:
-        type: integer
-      title:
-        type: string
-    required:
-    - description
-    - tdp
-    - title
+  ds.ComponentCreateRequest:
     type: object
-  RIP_internal_app_ds.ComponentDTO:
+  ds.ComponentDTO:
     properties:
       description:
         type: string
@@ -32,18 +17,15 @@ definitions:
         type: integer
       image_url:
         type: string
-      specifications:
-        items:
-          type: string
-        type: array
       status:
         type: boolean
       tdp:
+        description: Specifications pq.StringArray `json:"specifications"`
         type: integer
       title:
         type: string
     type: object
-  RIP_internal_app_ds.ComponentInRequest:
+  ds.ComponentInRequest:
     properties:
       component_id:
         type: integer
@@ -53,40 +35,34 @@ definitions:
         type: string
       image_url:
         type: string
-      specifications:
-        items:
-          type: string
-        type: array
       tdp:
+        description: Specifications pq.StringArray `json:"specifications"`
         type: integer
       title:
         type: string
     type: object
-  RIP_internal_app_ds.ComponentToCoolingUpdateRequest:
+  ds.ComponentToCoolingUpdateRequest:
     properties:
       count:
         type: integer
     type: object
-  RIP_internal_app_ds.ComponentUpdateRequest:
+  ds.ComponentUpdateRequest:
     properties:
       description:
         type: string
-      specifications:
-        items:
-          type: string
-        type: array
       tdp:
+        description: Specifications pq.StringArray `json:"specifications"`
         type: integer
       title:
         type: string
     type: object
-  RIP_internal_app_ds.CoolingDTO:
+  ds.CoolingDTO:
     properties:
       completion_date:
         type: string
       components:
         items:
-          $ref: '#/definitions/RIP_internal_app_ds.ComponentInRequest'
+          $ref: '#/definitions/ds.ComponentInRequest'
         type: array
       cooling_power:
         type: number
@@ -107,7 +83,7 @@ definitions:
       status:
         type: integer
     type: object
-  RIP_internal_app_ds.CoolingResolveRequest:
+  ds.CoolingResolveRequest:
     properties:
       action:
         description: '"complete" | "reject"'
@@ -115,27 +91,27 @@ definitions:
     required:
     - action
     type: object
-  RIP_internal_app_ds.CoolingUpdateRequest:
+  ds.CoolingUpdateRequest:
     properties:
       room_area:
         type: number
       room_height:
         type: number
     type: object
-  RIP_internal_app_ds.LoginResponse:
+  ds.LoginResponse:
     properties:
       token:
         type: string
       user:
-        $ref: '#/definitions/RIP_internal_app_ds.UserDTO'
+        $ref: '#/definitions/ds.UserDTO'
     type: object
-  RIP_internal_app_ds.PaginatedResponse:
+  ds.PaginatedResponse:
     properties:
       items: {}
       total:
         type: integer
     type: object
-  RIP_internal_app_ds.UserDTO:
+  ds.UserDTO:
     properties:
       full_name:
         type: string
@@ -146,7 +122,7 @@ definitions:
       username:
         type: string
     type: object
-  RIP_internal_app_ds.UserLoginRequest:
+  ds.UserLoginRequest:
     properties:
       password:
         type: string
@@ -156,7 +132,7 @@ definitions:
     - password
     - username
     type: object
-  RIP_internal_app_ds.UserRegisterRequest:
+  ds.UserRegisterRequest:
     properties:
       full_name:
         type: string
@@ -169,7 +145,7 @@ definitions:
     - password
     - username
     type: object
-  RIP_internal_app_ds.UserUpdateRequest:
+  ds.UserUpdateRequest:
     properties:
       full_name:
         type: string
@@ -184,8 +160,8 @@ info:
     email: support@example.com
     name: API Support
   description: API-сервер для управления заявками и компонентами серверов в системе
-    Cooling.
-  title: API для системы FRAX
+    CoolingSystems.
+  title: API для системы CoolingSystems
   version: "1.0"
 paths:
   /auth/login:
@@ -200,14 +176,14 @@ paths:
         name: credentials
         required: true
         schema:
-          $ref: '#/definitions/RIP_internal_app_ds.UserLoginRequest'
+          $ref: '#/definitions/ds.UserLoginRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/RIP_internal_app_ds.LoginResponse'
+            $ref: '#/definitions/ds.LoginResponse'
         "400":
           description: Ошибка валидации
           schema:
@@ -259,7 +235,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/RIP_internal_app_ds.PaginatedResponse'
+            $ref: '#/definitions/ds.PaginatedResponse'
         "500":
           description: Внутренняя ошибка сервера
           schema:
@@ -279,14 +255,14 @@ paths:
         name: componentData
         required: true
         schema:
-          $ref: '#/definitions/RIP_internal_app_ds.ComponentCreateRequest'
+          $ref: '#/definitions/ds.ComponentCreateRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/RIP_internal_app_ds.ComponentDTO'
+            $ref: '#/definitions/ds.ComponentDTO'
         "400":
           description: Ошибка валидации
           schema:
@@ -353,7 +329,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/RIP_internal_app_ds.ComponentDTO'
+            $ref: '#/definitions/ds.ComponentDTO'
         "404":
           description: Компонент не найден
           schema:
@@ -378,14 +354,14 @@ paths:
         name: updateData
         required: true
         schema:
-          $ref: '#/definitions/RIP_internal_app_ds.ComponentUpdateRequest'
+          $ref: '#/definitions/ds.ComponentUpdateRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/RIP_internal_app_ds.ComponentDTO'
+            $ref: '#/definitions/ds.ComponentDTO'
         "400":
           description: Ошибка валидации
           schema:
@@ -481,7 +457,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/RIP_internal_app_ds.CoolingDTO'
+              $ref: '#/definitions/ds.CoolingDTO'
             type: array
         "401":
           description: Необходима авторизация
@@ -531,7 +507,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/RIP_internal_app_ds.CoolingDTO'
+            $ref: '#/definitions/ds.CoolingDTO'
         "401":
           description: Необходима авторизация
           schema:
@@ -565,7 +541,7 @@ paths:
         name: updateData
         required: true
         schema:
-          $ref: '#/definitions/RIP_internal_app_ds.CoolingUpdateRequest'
+          $ref: '#/definitions/ds.CoolingUpdateRequest'
       responses:
         "204":
           description: No Content
@@ -628,7 +604,7 @@ paths:
         name: updateData
         required: true
         schema:
-          $ref: '#/definitions/RIP_internal_app_ds.ComponentToCoolingUpdateRequest'
+          $ref: '#/definitions/ds.ComponentToCoolingUpdateRequest'
       responses:
         "204":
           description: No Content
@@ -689,7 +665,7 @@ paths:
         name: action
         required: true
         schema:
-          $ref: '#/definitions/RIP_internal_app_ds.CoolingResolveRequest'
+          $ref: '#/definitions/ds.CoolingResolveRequest'
       responses:
         "204":
           description: No Content
@@ -720,7 +696,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/RIP_internal_app_ds.CartBadgeDTO'
+            $ref: '#/definitions/ds.CartBadgeDTO'
         "401":
           description: Необходима авторизация
           schema:
@@ -778,14 +754,14 @@ paths:
         name: credentials
         required: true
         schema:
-          $ref: '#/definitions/RIP_internal_app_ds.UserRegisterRequest'
+          $ref: '#/definitions/ds.UserRegisterRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/RIP_internal_app_ds.UserDTO'
+            $ref: '#/definitions/ds.UserDTO'
         "400":
           description: Ошибка валидации
           schema:
@@ -816,7 +792,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/RIP_internal_app_ds.UserDTO'
+            $ref: '#/definitions/ds.UserDTO'
         "401":
           description: Необходима авторизация
           schema:
@@ -849,7 +825,7 @@ paths:
         name: updateData
         required: true
         schema:
-          $ref: '#/definitions/RIP_internal_app_ds.UserUpdateRequest'
+          $ref: '#/definitions/ds.UserUpdateRequest'
       responses:
         "204":
           description: No Content
